--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# project folders
 docs/site/
+data/
+models/
+outputs/
+wandb/
+# but not the following paths:
+!ml_ops_detect_ai_generated_text/data/
+!ml_ops_detect_ai_generated_text/models/
 
 # test cache
 manual_test/
@@ -175,3 +183,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/data
