--- a/configs/training/training_conf.yaml
+++ b/configs/training/training_conf.yaml
@@ -3,11 +3,13 @@ model_path: "models/"
 data_path: "processed/llm-detect-ai-generated-text"
 
 #
-epochs: 1
-num_steps: 10
-# use: "epochs"
-use: "num_steps"
+max_epochs: 1
+max_steps: 10
+use: "epochs"
+#use: "steps"
+log_every_n_steps: 20
+batch_size: 16
 
-learning_rate: 2e-5
+learning_rate: 0.001
 
 
