--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# This assumes you have Python 3.10 in your virtual environment
+# can be alleviated with >= need to discuss with group
 hydra-core==1.3.2
 numpy==1.26.3
 omegaconf==2.3.0
