--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,6 +3,10 @@ defaults:
   - model: model_conf.yaml
   - training: training_conf.yaml
   - data: data_conf.yaml
+  #- experiment: null
+  - experiment: exp1.yaml
+
+
 
 version_base: 1.2
 
