--- a/.github/workflows/codecheck.yml
+++ b/.github/workflows/codecheck.yml
@@ -1,4 +1,4 @@
-name: "Code formatting"
+name: "Formatting PEP8"
 
 on:
   push:
@@ -7,37 +7,38 @@ on:
     branches: [ master, main ]
 
 jobs:
-    build:
-        strategy:
-        matrix:
-            os: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: ${{ matrix.os }}
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
-        steps:
-            - name: Checkout
-                uses: actions/checkout@v2
-            - name: Set up Python 3.11
-                uses: actions/setup-python@v2
-                with:
-                python-version: "3.11"
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.11"
 
-            - name: Cache Python dependencies
-                uses: actions/cache@v2
-                with:
-                path: |
-                    ~/.cache/pip
-                    %LocalAppData%\pip\Cache
-                key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt', '**/requirements_dev.txt') }}
-                restore-keys: |
-                    ${{ runner.os }}-python-
+    - name: Cache Python dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/pip
+          %LocalAppData%\pip\Cache
+        key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt', '**/requirements_dev.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-python-
 
-            - name: Install dependencies
-                run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-                pip install -r requirements_dev.txt
-                pip install -e .
-            - name: Test with pytest
-                run: |
-                ruff check .
-                ruff format .
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements_dev.txt
+        pip install -e .
+
+    - name: ruff
+      run: |
+        ruff check .
+        ruff format .
