--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -35,7 +35,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r requirements_tests.txt
+        pip install -r requirements_dev.txt
+        pip install -e .
 
     - uses: iterative/setup-dvc@v1
     - name: Get data
