--- a/.github/workflows/codecheck.yml
+++ b/.github/workflows/codecheck.yml
@@ -1,10 +1,7 @@
 name: "Formatting PEP8"
 
 on:
-  push:
-    branches: [ master, main ]
-  pull_request:
-    branches: [ master, main ]
+  workflow_dispatch:
 
 jobs:
   build:
