--- a/.github/workflows/codecheck.yml
+++ b/.github/workflows/codecheck.yml
@@ -1,17 +1,26 @@
 name: "Formatting PEP8"
 
+#on:
+#  push:
+#    branches:
+#      - main
+#      - unit_testing_and_workflows
+#  workflow_dispatch:
+
+# Reduced to only run on main branch for now
+# since we "only" got 2000 minutes per month
+# Also only test on linux for now    
 on:
-  push:
-    branches:
-      - main
-      - unit_testing_and_workflows
-  workflow_dispatch:
+    push:
+        branches: [ master, main ]
+    pull_request:
+        branches: [ master, main ]
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest] #, windows-latest, macos-latest
     runs-on: ${{ matrix.os }}
 
     steps:
