--- a/.github/workflows/codecheck.yml
+++ b/.github/workflows/codecheck.yml
@@ -1,20 +1,20 @@
 name: "Formatting PEP8"
 
-#on:
-#  push:
-#    branches:
-#      - main
-#      - unit_testing_and_workflows
-#  workflow_dispatch:
+on:
+  push:
+    branches:
+      - main
+      - unit_testing_and_workflows
+  workflow_dispatch:
 
 # Reduced to only run on main branch for now
 # since we "only" got 2000 minutes per month
 # Also only test on linux for now    
-on:
-    push:
-        branches: [ master, main ]
-    pull_request:
-        branches: [ master, main ]
+#on:
+#    push:
+#        branches: [ master, main ]
+#    pull_request:
+#        branches: [ master, main ]
 
 jobs:
   build:
