--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -62,5 +62,7 @@ jobs:
       run: |
         coverage run -m pytest tests/
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
