--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,8 @@
 [core]
-    remote = storage
+    remote = gdrive://apqcomgmfkudp4vgnccmn6bwx3de1gc-
     autostage = true
 ['remote "storage"']
     url = gdrive://1apqcOMgmfkuDp4VGnCcmN6Bwx3dE1GC-
+['remote "gdrive://apqcomgmfkudp4vgnccmn6bwx3de1gc-"']
+    url = gs://mlopsprojectdatabucket/
+    version_aware = true
