--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-/data
+# Ignore everything in the /data directory
+/data/*
+
+# But keep the .gitkeep file
+!/data/.gitkeep
