--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # project folders
 docs/site/
-data/
+/data/*
+!/data/.gitkeep
 models/
 outputs/
 wandb/
@@ -185,4 +186,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-/data
+
