--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,8 @@
 [core]
-    remote = storage
+    remote = remote_storage
     autostage = true
 ['remote "storage"']
     url = gdrive://1apqcOMgmfkuDp4VGnCcmN6Bwx3dE1GC-
+['remote "remote_storage"']
+    url = gs://mlops-project-bucket21/
+    version_aware = true
