--- a/configs/training/training_conf.yaml
+++ b/configs/training/training_conf.yaml
@@ -1,6 +1,6 @@
 seed: 42
 model_path: "models/"
-model_bucker: ""
+model_bucket: ""
 data_path: "processed/llm-detect-ai-generated-text"
 data_bucket: ""
 
